fix: update accent colors and improve link styles for better visibility

--- a/assets/scss/general.scss
+++ b/assets/scss/general.scss
@@ -1,31 +1,43 @@
 a {
-    text-decoration: none;
-    color: var(--accent-color);
+	text-decoration: none;
+	color: var(--accent-color);
 
-    &:hover {
-        color: var(--accent-color-darker);
-    }
+	&:hover {
+		color: var(--accent-color-darker);
+	}
 
-    &.link {
-        box-shadow: 0px -2px 0px rgba(var(--link-background-color), var(--link-background-opacity)) inset;
-        transition: all 0.3s ease;
+	&.link {
+		box-shadow: 0px -2px 0px var(--accent-color) inset;
+		transition: all 0.3s ease;
 
-        &:hover {
-            box-shadow: 0px calc(-1rem * var(--article-line-height)) 0px rgba(var(--link-background-color), var(--link-background-opacity-hover)) inset;
-        }
-    }
+		&:hover {
+			box-shadow: 0px calc(-1rem * var(--article-line-height)) 0px
+				var(--accent-color) inset;
+			color: var(--card-background);
+		}
+
+		&:visited {
+			color: var(--accent-color-darker);
+			box-shadow: 0px -2px 0px var(--accent-color-darker) inset;
+			&:hover {
+				box-shadow: 0px calc(-1rem * var(--article-line-height)) 0px
+					var(--accent-color-darker) inset;
+				color: var(--card-background);
+			}
+		}
+	}
 }
 
 .section-title {
-    text-transform: uppercase;
-    margin-top: 0;
-    margin-bottom: 10px;
-    display: block;
-    font-size: 1.6rem;
-    font-weight: bold;
-    color: var(--body-text-color);
+	text-transform: uppercase;
+	margin-top: 0;
+	margin-bottom: 10px;
+	display: block;
+	font-size: 1.6rem;
+	font-weight: bold;
+	color: var(--body-text-color);
 
-    a {
-        color: var(--body-text-color);
-    }
+	a {
+		color: var(--body-text-color);
+	}
 }
