--- a/assets/scss/partials/article.scss
+++ b/assets/scss/partials/article.scss
@@ -61,10 +61,10 @@
 	font-weight: 600;
 	margin: 0;
 	color: var(--card-text-color-main);
-	font-size: 2.2rem;
+	font-size: 2.5rem;
 
 	@include respond(xl) {
-		font-size: 2.4rem;
+		font-size: 3rem;
 	}
 
 	a {
