--- a/assets/scss/variables.scss
+++ b/assets/scss/variables.scss
@@ -13,8 +13,8 @@ $defaultTagColors: #fff, #fff, #fff, #fff, #fff;
 
 	--body-background: #f5f5fa;
 
-	--accent-color: #1e577e;
-	--accent-color-darker: #144e75;
+	--accent-color: #22587b;
+	--accent-color-darker: #0c3b5a;
 	--accent-color-text: #fff;
 	--body-text-color: #535353;
 
